# name: TestBreakdownProps.test_breakdown_group_props
  '
  
  SELECT groupArray(value)
  FROM
    (SELECT replaceRegexpAll(JSONExtractRaw(group_properties_0, 'industry'), '^"|"$', '') AS value,
            count(*) as count
     FROM events e
     INNER JOIN
       (SELECT group_key,
               argMax(group_properties, _timestamp) AS group_properties_0
        FROM groups
        WHERE team_id = 2
          AND group_type_index = 0
        GROUP BY group_key) groups_0 ON "$group_0" == groups_0.group_key
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toDateTime('2020-01-01 00:00:00', 'UTC')
       AND timestamp <= toDateTime('2020-01-12 23:59:59', 'UTC')
       AND ((isNull(replaceRegexpAll(JSONExtractRaw(group_properties_0, 'out'), '^"|"$', ''))
             OR NOT JSONHas(group_properties_0, 'out')))
     GROUP BY value
     ORDER BY count DESC
     LIMIT 5
     OFFSET 0)
  '
---
# name: TestBreakdownProps.test_breakdown_group_props.1
  '
  
  SELECT groupArray(value)
  FROM
    (SELECT replaceRegexpAll(JSONExtractRaw(group_properties_0, 'industry'), '^"|"$', '') AS value,
            count(*) as count
     FROM events e
     INNER JOIN
       (SELECT group_key,
               argMax(group_properties, _timestamp) AS group_properties_0
        FROM groups
        WHERE team_id = 2
          AND group_type_index = 0
        GROUP BY group_key) groups_0 ON "$group_0" == groups_0.group_key
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toDateTime('2020-01-01 00:00:00', 'UTC')
       AND timestamp <= toDateTime('2020-01-12 23:59:59', 'UTC')
       AND ((isNull(replaceRegexpAll(JSONExtractRaw(group_properties_0, 'out'), '^"|"$', ''))
             OR NOT JSONHas(group_properties_0, 'out')))
     GROUP BY value
     ORDER BY count DESC
     LIMIT 5
     OFFSET 0)
  '
---
# name: TestBreakdownProps.test_breakdown_person_props
  '
  
  SELECT groupArray(value)
  FROM
    (SELECT replaceRegexpAll(JSONExtractRaw(person_props, '$browser'), '^"|"$', '') AS value,
            count(*) as count
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     INNER JOIN
       (SELECT id,
               argMax(properties, _timestamp) as person_props
        FROM person
        WHERE team_id = 2
        GROUP BY id
        HAVING max(is_deleted) = 0) person ON pdi.person_id = person.id
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toDateTime('2019-12-21 00:00:00', 'UTC')
       AND timestamp <= toDateTime('2020-01-04 23:59:59', 'UTC')
     GROUP BY value
     ORDER BY count DESC
     LIMIT 5
     OFFSET 0)
  '
---
# name: TestBreakdownProps.test_breakdown_person_props_materialized
  '
  
  SELECT groupArray(value)
  FROM
    (SELECT "pmat_$browser" AS value,
            count(*) as count
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     INNER JOIN
       (SELECT id,
               argMax(pmat_$browser, _timestamp) as pmat_$browser
        FROM person
        WHERE team_id = 2
        GROUP BY id
        HAVING max(is_deleted) = 0) person ON pdi.person_id = person.id
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toDateTime('2019-12-21 00:00:00', 'UTC')
       AND timestamp <= toDateTime('2020-01-04 23:59:59', 'UTC')
     GROUP BY value
     ORDER BY count DESC
     LIMIT 5
     OFFSET 0)
  '
---
# name: TestBreakdownProps.test_breakdown_person_props_with_entity_filter_and_or_props_with_partial_pushdown
  '
  
  SELECT groupArray(value)
  FROM
    (SELECT replaceRegexpAll(JSONExtractRaw(person_props, '$browser'), '^"|"$', '') AS value,
            count(*) as count
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     INNER JOIN
       (SELECT id,
               argMax(properties, _timestamp) as person_props
        FROM person
        WHERE team_id = 2
        GROUP BY id
        HAVING max(is_deleted) = 0
        AND ((replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), '$browser'), '^"|"$', '') ILIKE '%test%'))) person ON pdi.person_id = person.id
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toDateTime('2019-12-21 00:00:00', 'UTC')
       AND timestamp <= toDateTime('2020-01-04 23:59:59', 'UTC')
       AND ((has(['test2'], replaceRegexpAll(JSONExtractRaw(person_props, '$os'), '^"|"$', ''))
             OR has(['val'], replaceRegexpAll(JSONExtractRaw(e.properties, 'key'), '^"|"$', ''))))
     GROUP BY value
     ORDER BY count DESC
     LIMIT 5
     OFFSET 0)
  '
---
